5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1575_579.log
== TEST (2019-03-19 16:52:22) 
-- CODE:
print("A UFAM tem", 2016 - 107, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:52:25) 
-- CODE:
print("A UFAM tem", 2016 - 107, "anos de fundacao.")
-- EXECUTION TIME:
0.170926
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1909 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:52:28) 
-- CODE:
print("A UFAM tem", 2016 - 107, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:52:42) 
-- CODE:
print("A UFAM tem", 2016 - 0107, "anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 0107, "anos de fundacao.")
                                  ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:52:46) 
-- CODE:
print("A UFAM tem", 2016 - 0107, "anos de fundacao.")
-- EXECUTION TIME:
0.126088
-- ERROR:
  File "/home/codebench/codes/1575/579/main.py", line 1
    print("A UFAM tem", 2016 - 0107, "anos de fundacao.")
                                  ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:53:11) 
-- CODE:
print("A UFAM tem" 2016 - 107, "anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2016 - 107, "anos de fundacao.")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:53:42) 
-- CODE:
print("A UFAM tem", 2016 - 107, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:55:12) 
-- CODE:
print("A UFAM tem", 2016 - 109, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1907 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:55:21) 
-- CODE:
print("A UFAM tem", 2016 - 106, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1910 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:55:24) 
-- CODE:
print("A UFAM tem", 2016 - 106, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1910 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:55:27) 
-- CODE:
print("A UFAM tem", 2016 - 106, "anos de fundacao.")
-- EXECUTION TIME:
0.206331
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1910 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:55:33) 
-- CODE:
print("A UFAM tem", 2016 - 107, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:55:39) 
-- CODE:
print("A UFAM tem", 2016 - 108, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1908 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:55:42) 
-- CODE:
print("A UFAM tem", 2016 - 108, "anos de fundacao.")
-- EXECUTION TIME:
0.166549
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1908 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:55:51) 
-- CODE:
print("A UFAM tem", 2016 - 107, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:56:35) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:56:39) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.217613
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
